# dagster_k8s_deploy

./: README.md  cli.py  configvalues.yaml  create_deploy.py  currentwork.md  deploy_stack.sh  git-sync.md  install_dependencies.sh  pyproject.toml  readlog.py
A/: 01_deployment.yaml  02_service.yaml
B/: 01_deployment.yaml  02_service.yaml
codelocation/: Dockerfile  README.md  build_run.sh  uv_dockerfile
deploy/A/: 01_deployment.yaml  02_service.yaml
deploy/B/: 01_deployment.yaml  02_service.yaml
deploy/instance/: 01_configmap-instance.yaml  02_configmap-workspace.yaml  03_deployment-webserver.yaml  04_service-webserver.yaml  05_deployment-daemon.yaml
deploy/postgres/: 13_secret-dagster.yaml  14_deployment-dagster.yaml  15_service-dagster.yaml
instance/: 02_configmap-workspace.yaml  03_deployment-webserver.yaml  05_deployment-daemon.yaml
postgres/: 01_namespace-A.yaml  02_namespace-B.yaml  04_pvc-A.yaml  05_secret-A.yaml  06_deployment-A.yaml  07_service-A.yaml  08_pvc-B.yaml  09_secret-B.yaml  10_deployment-B.yaml  11_service-B.yaml  12_pvc-dagster.yaml  14_deployment-dagster.yaml
