[project]
name = "dagster-k8s-deploy-tools"
version = "0.1.0"
description = "CLI tooling for Dagster Kubernetes GitOps deployment (generate/apply manifests)."
requires-python = ">=3.9"
dependencies = [
  "typer[all]>=0.12.0",
  "loguru>=0.7.2",
  "pyyaml>=6.0",
]

[# console scripts intentionally removed; use `uv run cli.py`]

[tool.uv]
dev-dependencies = []
